--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,17 @@ body{
     color: white;
     font-family: Arial, sans-serif; 
     padding: 20px;
+    font-size: 22px;
+    font-weight: bold;
 }
 .ball{
     display: grid;
     place-items: center;
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     background-color: red;
     border-radius: 50%;
     cursor: pointer;
     margin:  auto; 
+    transition: .3s ease-in-out;
 }
