Add click functionality to additional balls and update styles for better organization

--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,9 @@ body{
 .ball3{
     background-color: green;
 }
+.ball4{
+    background-color: rgb(109, 109, 69);
+}
+.ball5{
+    background-color: rgb(69, 109, 109);
+}
